--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Visor</string>
     <string name="action_settings">Settings</string>
     <string name="loading_new_posts">Loading new posts...</string>
+    <string name="title_activity_post_gallery">Gallery</string>
 </resources>
