--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Visor</string>
     <string name="action_settings">Settings</string>
-    <string name="loading_new_posts">Loading new posts...</string>
+    <string name="loading_new_posts">Loading new posts…</string>
+    <string name="loading_high_res_image">Loading high-res photo…</string>
     <string name="title_activity_post_gallery">Gallery</string>
     <string name="error_downloading_posts">Couldn\'t download the posts</string>
     <string name="error_downloading_pictures">Couldn\'t download the pictures</string>
+    <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
 </resources>
