--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="loading_new_posts">Loading new posts...</string>
     <string name="title_activity_post_gallery">Gallery</string>
+    <string name="error_downloading_posts">Couldn\'t download the posts</string>
+    <string name="error_downloading_pictures">Couldn\'t download the pictures</string>
 </resources>
