--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="error_downloading_pictures">Couldn\'t download the pictures</string>
     <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
     <string name="click_to_display_high_res">Click on a picture to display it in High-res</string>
+    <string name="title_activity_webview">webview</string>
 </resources>
